src/components/Table/style.css
table {
  border-collapse: collapse;
  width: 100%;
  /* font-size: calc(100% + min(0.25vh, 0.25vw)); */
  /* border: 1px solid var(--border-color);
  border-radius: clamp(1rem, 0.5vh + 1rem, 4rem); */
  font-size: 1rem;
}

thead > tr {
  border-bottom: 1px solid var(--border-color);
  background-color: var(--table-row-color);
}

table > thead {
  position: sticky;
  top: 0;
  z-index: 9;
}

tr {
  display: grid;
  grid-template-columns: 0.35fr 1fr 1.25fr 0.5fr 0.5fr;
  padding: 0rem 1rem;
  height: clamp(2.5rem, 4vh + 1rem, 5rem);
  align-items: center;
  justify-items: start;
  transition: background-color 0.3s;
  /* animation: fade-in .6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both; */
}

tr:nth-child(even) {
  background-color: var(--table-row-color);
}

th,
td {
  padding: 0 0 0 0.5rem;
}

td:nth-child(2),
td:nth-child(3),
th:nth-child(2),
th:nth-child(3) {
  word-break: break-all;
}

td:nth-child(4) {
  text-transform: capitalize;
}

tbody tr.table-selected-row {
  background-color: var(--table-selected-bg-color);
}

.input-table-cell,
.dropdown {
  /* font-size: 0.9rem; */
  max-width: 100%;
  width: 100%;
  border-radius: 0.25rem;
  border: 1px solid var(--border-color);
  background-color: var(--white);
  outline: none;
  transition: border-color 0.3s;
}

.input-table-cell {
  padding: 0.1rem 0.2rem;
}

.input-container {
  position: relative;
}

.dropdown {
  padding: 0.05rem 0.2rem 0.05rem 0rem;
  cursor: pointer;
}

.input-table-cell:focus,
.dropdown:focus {
  border-color: var(--primary-color);
}

.border-color-red,
.border-color-red:focus {
  border-color: var(--warning-color);
}

.error {
  position: absolute;
  font-size: 0.6rem;
  color: var(--warning-color);
  animation: fade-in 0.3s;
}

.button-group {
  display: flex;
  gap: 1rem;
}

@media (max-width: 650px) {
  thead 
  , tbody > tr > td:where([data-label="Checkbox"])
  /* th:not(:first-child)   */ {
    display: none;
  }

  tbody > tr {
    height: auto;
    grid-template-columns: auto;
    /* grid-template-rows: auto; */
    gap: 0.7rem;
    padding: 1rem;
    /* display: block; */
    margin: 0.5rem 1rem;
    border-radius: 0.5rem;
    background-color: var(--white);
    box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px,
      rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
      rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
  }

  tr:nth-child(even) {
    background-color: var(--white);
  }

  td {
    display: grid;
    grid-template-columns: 10ch auto;
    gap: 0.5rem;
    height: 1.2rem;
  }

  td::before {
    content: attr(data-label) ": ";
    font-size: 0.9rem;
    opacity: 0.7;
    /* margin-block: auto; */
  }

  .error {
    bottom: -50%;
    left: 36%;
  }

  .button-group {
    gap: 1.5rem;
  }
}

